добавил запуск воркера

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 v0.1-dev ~80% 22.11.16
     1. Дописать задачник
     2. Написать балансировщик воркеров
+    2.1 Написать структуру запуска воркера
     3. Написать метод для запуска задач в воркерах
     4. Реализовать возврат результата выполнения задачи от воркера через контроллер.
 To be continued...
