more TODOs completed

--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 v0.1-dev ~80% 22.11.16
-    1. Дописать задачник
-    2. Написать балансировщик воркеров
-    2.1 Написать структуру запуска воркера
-    3. Написать метод для запуска задач в воркерах
-    4. Реализовать возврат результата выполнения задачи от воркера через контроллер.
+v0.1-dev ~83% 28.11.16
+    1. Написать метод для запуска задач в воркерах
+    2. Написать менеджер контекста в воркерах
+    3. Реализовать возврат результата выполнения задачи от воркера через контроллер.
 To be continued...
