--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 v0.1-dev ~80% 22.11.16
 v0.1-dev ~83% 28.11.16
     1. Написать метод для запуска задач в воркерах
+    1.1 Менеджер команд доделать
+    1.2 Реализовать диспетчер результата выполнения команды
     2. Написать менеджер контекста в воркерах
     3. Реализовать возврат результата выполнения задачи от воркера через контроллер.
 To be continued...
