more modifies for pre-alpha version

--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
 v0.1-dev ~80% 22.11.16
 v0.1-dev ~83% 28.11.16
-    1. Написать метод для запуска задач в воркерах
-    1.1 Менеджер команд доделать
-    1.2 Реализовать диспетчер результата выполнения команды
-    2. Написать менеджер контекста в воркерах
-    3. Реализовать возврат результата выполнения задачи от воркера через контроллер.
+v0.1-dev ~98% 18.12.16
+    -1. Исправить баг в Worker::run
+    0. Перелопатить весь код, код должен соответствовать всем принципам SOLID
+    1. Исправить костыль в Core для Init
+    2. Не работает блокирующее чтение в esockets - исправить
+    3. Разобраться и исправить баг с постоянным запуском воркеров
 To be continued...
