--- a/TODO
+++ b/TODO
@@ -1,9 +1,7 @@
 v0.1-dev ~80% 22.11.16
 v0.1-dev ~83% 28.11.16
 v0.1-dev ~98% 18.12.16
-    -1. Исправить баг в Worker::run
     0. Перелопатить весь код, код должен соответствовать всем принципам SOLID
-    1. Исправить костыль в Core для Init
-    2. Не работает блокирующее чтение в esockets - исправить
-    3. Разобраться и исправить баг с постоянным запуском воркеров
+    1. Исправить баг с постановкой задач воркером самому себе...
+    2. Обеспечить стабильность работы, а не стабильность падений.
 To be continued...
